[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[metadata]
name = nlp-cleaner
version = 0.0.1
author = Luis Guilherme de Almeida
author_email = luisg200@hotmail.com
description = NLP cleaner is a library to clean text to use in NLP projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luiguip/nlp-cleaner
project_urls =
    Bug Tracker = https://github.com/luiguip/nlp-cleaner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent